--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta property="og:title" content="Página Inicial">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Página-Inicial.html" data-home-page-title="Página Inicial" class="u-body"><header class="u-align-center-sm u-align-center-xs u-black u-clearfix u-header u-header" id="sec-1b1d"><div class="u-clearfix u-sheet u-sheet-1" onload= "largura = document.body.scrollWidth;altura = document.body.scrollHeight" >
+  <body onload= "largura = document.body.scrollWidth;altura = document.body.scrollHeight" data-home-page="Página-Inicial.html" data-home-page-title="Página Inicial" class="u-body"></onload> <header class="u-align-center-sm u-align-center-xs u-black u-clearfix u-header u-header" id="sec-1b1d"><div class="u-clearfix u-sheet u-sheet-1"></div>
         <a href="Página-Inicial.html" data-page-id="558603400" class="u-image u-logo u-image-1" data-image-width="244" data-image-height="299" title="Página Inicial">
           <img src="images/Logo1.png" class="u-logo-image u-logo-image-1">
         </a>
